# ALL_TYPES_API_LEARNING

./: README.md  db.sqlite3  pyproject.toml
api/: models.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_userfile.py
core/: settings.py  urls.py
